# bc-vigil

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
debian/: bc-vigil.conffiles  bc-vigil.env  bc-vigil.install  bc-vigil.postinst  bc-vigil.postrm  bc-vigil.service  changelog  control  copyright  rules
packaging/: README.md
src/bc_vigil/: __main__.py  app.py  config.py  db.py  i18n.py  models.py
src/bc_vigil/core/: admin_ops.py
src/bc_vigil/core/routes/: admin.py  dashboard.py  help.py  lang.py
src/bc_vigil/dedup/: bcduplicate.py  cron_builder.py  disk_detect.py  quarantine.py  scans.py  scheduler.py  scheduler_utils.py
src/bc_vigil/dedup/routes/: scans.py  schedules.py  targets.py  trash.py
src/bc_vigil/integrity/: bchash.py  cron_builder.py  scans.py  scheduler.py
src/bc_vigil/integrity/routes/: scans.py  schedules.py  targets.py
src/bc_vigil/static/: app.css
src/bc_vigil/storage/: disks.py  routes.py
src/bc_vigil/templates/: _macros.html  admin.html  base.html  help_en.html  help_fr.html  index.html
src/bc_vigil/templates/dedup/scans/: delete_preview.html  (+2 more)
src/bc_vigil/templates/help/: admin_en.html  admin_fr.html  dedup_en.html  dedup_fr.html  faq_en.html  faq_fr.html  integrity_en.html  integrity_fr.html  overview_en.html  overview_fr.html  page.html
src/bc_vigil/templates/scans/: detail.html  list.html
src/bc_vigil/templates/schedules/: _preview.html  form.html
src/bc_vigil/templates/storage/: list.html
src/bc_vigil/templates/targets/: detail.html  form.html  list.html
tests/: conftest.py  test_admin.py  test_cancel.py  test_coverage_100.py  test_coverage_fill.py  test_cron_builder.py  test_dedup_auto_resolve.py  test_dedup_coverage_100.py  test_dedup_disk_hdd.py  test_dedup_quarantine.py  test_e2e.py  test_i18n.py  test_i18n_mirror.py  test_memory_stats.py  test_migrations.py  test_patterns.py  test_qol.py  test_schedules_http.py  test_storage.py  test_target_path.py  test_ui_regressions.py
(+5 files in other folders)
